--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-    "name": "phaser3-typescript-project-template",
-    "version": "1.0.2",
-    "description": "A Phaser 3 Project Template using Rollup and TypeScript",
-    "main": "src/game.ts",
+    "name": "gamejam-21",
+    "version": "0.0.1",
+    "description": "",
+    "main": "src/index.ts",
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
         "build": "rollup --config rollup.config.dist.js",
         "watch": "rollup --watch --config rollup.config.dev.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/photonstorm/phaser3-typescript-project-template.git"
-    },
-    "author": "Richard Davey <rich@photonstorm.com> (http://www.photonstorm.com)",
+    "author": "Troy West",
     "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/photonstorm/phaser3-typescript-project-template/issues"
-    },
-    "homepage": "https://github.com/photonstorm/phaser3-typescript-project-template#readme",
     "devDependencies": {
         "@rollup/plugin-replace": "^2.3.4",
         "phaser": "^3.50.0",
