--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-    "name": "gamejam-21",
-    "version": "0.0.1",
-    "description": "",
-    "main": "src/index.ts",
-    "scripts": {
-        "dev": "rollup --config rollup.config.dev.js",
-        "build": "rollup --config rollup.config.dist.js",
-        "watch": "rollup --watch --config rollup.config.dev.js"
-    },
-    "author": "Troy West",
-    "license": "MIT",
-    "devDependencies": {
-        "@rollup/plugin-replace": "^2.3.4",
-        "phaser": "^3.50.0",
-        "rollup": "^2.35.1",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-serve": "^1.1.0",
-        "rollup-plugin-typescript2": "^0.29.0",
-        "rollup-plugin-uglify": "^6.0.4",
-        "typescript": "^4.1.3"
-    }
+  "name": "multiplayer-card-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0"
+  }
 }
